move packetizer selection to configuration (advanced) for pr3 only as cannot test for any other hardware.

--- a/java/src/jmri/jmrix/loconet/pr3/Pr3Bundle.properties
+++ b/java/src/jmri/jmrix/loconet/pr3/Pr3Bundle.properties
@@ -10,3 +10,6 @@ StatusPr2       = Programmer Mode
 StatusUnknown   = PR3 Mode Unknown
 
 Pr3SelectTitle  = PR3 Mode Selector
+
+lnPacketizer    = Normal - Recommended
+lnPacketizerStrict = Strict
