--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -70,6 +70,8 @@ BroadcastPortLabel      = Broadcast Port:
 XconnectionUsesLabel    = {0} connection uses:
 CommandStationTypeLabel = Command station type:
 
+PacketizerTypeLabel     = Packetizer type:
+
 #JmrixAbstractConnectionConfig (item on the above ConfigPane)
 AdditionalConnectionSettings = Additional Connection Settings
 ConnectionPrefix        = Connection Prefix:
