--- a/build.xml
+++ b/build.xml
@@ -350,6 +350,7 @@
         <exclude name="jmri/server/json/reporter/JsonReporter.class" />
         <exclude name="jmri/server/json/roster/JsonRoster.class" />
         <exclude name="jmri/server/json/signalMast/JsonSignalMast.class" />
+        <exclude name="jmri/jmrit.ussctc/Lock.class" />
     </fileset>
 
 
