--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -70,7 +70,10 @@ BroadcastPortLabel      = Broadcast Port:
 XconnectionUsesLabel    = {0} connection uses:
 CommandStationTypeLabel = Command station type:
 
-PacketizerTypeLabel     = Packetizer type:
+PacketizerTypeLabel              = Packetizer stype:
+PacketizerTypelnPacketizer       = Normal (recommended)
+PacketizerTypelnPacketizerStrict = Strict
+
 
 #JmrixAbstractConnectionConfig (item on the above ConfigPane)
 AdditionalConnectionSettings = Additional Connection Settings
