Add support for providing JSON schemas
Adds support for getting JSON schemas by clients.
Compiles, but fails tests, since actual schemas are missing.
Committing to ensure work is not lost.

--- a/java/src/jmri/server/json/Bundle.properties
+++ b/java/src/jmri/server/json/Bundle.properties
@@ -7,6 +7,7 @@ PutNotAllowed=Putting {0} is not allowed.
 ErrorMissingName=Name data element required.
 ErrorUnknownType=Unknown object type {0} was requested.
 UnlistableService={0} cannot be listed.
+NotAClientType=No messages from clients of type "{0}" are allowed.
 #HTTP 404 Not Found
 ErrorNotFound=Object type {0} named {1} not found.
 #HTTP 500 Internal Error
