--- a/pom.xml
+++ b/pom.xml
@@ -517,7 +517,7 @@
                                 <File>jmri/server/json/roster/JsonRoster.class</File>
                                 <File>jmri/server/json/reporter/JsonReporter.class</File>
                                 <File>jmri/server/json/signalMast/JsonSignalMast.class</File>
-                                <File>jmri/jmrit.ussctc/Lock.class</File>
+                                <File>jmri/jmrit/ussctc/Lock.class</File>
                                 <File>jmri/AddressedProgrammerManager.class</File>
                                 <File>jmri/PhysicalLocationReporter.class</File>
                             </excludes>
