override Gv CreateSystemName to accept documented patterns in Add new item Improve tooltip Javadoc method

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -19,13 +19,13 @@ RenumberSupport             = Node Renumbering is not supported using Simulator.
   Use the Add/Delete Node tool instead.
 
 # GrapevineTurnout (Add to table pane) items
-AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
-AddInputEntryToolTip        = 22016 (Sensor node 22, pin 16)<br>\
-22p16 (p = parallel input )<br>\
+AddOutputEntryToolTip=22103 (Output node 22, card/bank 1, connector 3)
+AddInputEntryToolTip=22016 (Sensor node 22, pin 16)<br>\
+22B16 (Sensor node 22, pin 16)<br>\
+22p16 (p = parallel input)<br>\
 22a3 (a = ASD occupancy sensor)<br>\
-22103 (a = ASD occupancy sensor)<br>\
+22103 (ASD occupancy sensor)<br>\
 22s3 (s = old style serial occupancy sensor)<br>\
-22023 (s = old style serial occupancy sensor)<br>\
+22023 (old style serial occupancy sensor)<br>\
 22m3 (m = ASD motion sensor)<br>\
-22203 (m = ASD motion sensor)<br>\
-22103 (output, card/bank 1, connector 3)
+22203 (ASD motion sensor)
