--- a/java/src/jmri/jmrix/sprog/SprogBundle.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle.properties
@@ -88,6 +88,7 @@ OptionTrackPowerLabel = Track Power At StartUp:
 
 #SprogCS items
 SprogCSTitle = SPROG Command Station
+CSErrorFrameDialogString = Timeout waiting for reply from hardware - Power has been turned off.\nTry restoring power to resume operation.
 
 #PiSprog items
 PiSprogNanoCSTitle = Pi-SPROG Nano Command Station
