add config option for node auto-initialization Gv message docs adapter Javadoc inherit + vars

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -18,6 +18,12 @@ ButtonSetParity             = Set Parity
 RenumberSupport             = Node Renumbering is not supported using Simulator.\n\
   Use the Add/Delete Node tool instead.
 
+# config pane options
+AutoInitLabel               = Node Auto-initialize:
+ButtonNoInit                = Don't
+ButtonAll                   = All possible
+Button4Each                 = First 4 per bank
+
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip=22103 (Output node 22, card/bank 1, connector 3)
 AddInputEntryToolTip=22016 (Sensor node 22, pin 16)<br>\
