SerialNode address 1-127, not 0-255 remove SimTC

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -20,7 +20,7 @@ RenumberSupport             = Node Renumbering is not supported using Simulator.
 
 # config pane options
 AutoInitLabel               = Node Auto-initialize:
-ButtonNoInit                = Don't
+ButtonNoInit                = Disabled
 ButtonAll                   = All possible
 Button4Each                 = First 4 per bank
 
