update Gv help, add screen shots adapters Javadoc

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -10,7 +10,7 @@ MenuItemNodeTable           = Node Table
 GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
 GrapevineSimulatorName      = Grapevine Simulator
 
-ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string.
+ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string eg. 01 3d 01 20
 
 ButtonSetParity             = Set Parity
 
