--- a/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
@@ -21,7 +21,7 @@ StatusAbsent    = Absent
 TitleStatus     = Status
 TitleAddress    = Address
 
-ButtonInit      = Init
+ButtonInit      = Initialize
 
 ButtonRenumber  = Change Node Board Address...
 
