use the right closing tag

--- a/pom.xml
+++ b/pom.xml
@@ -505,7 +505,7 @@
                                 <File>jmri/util/swing/SamplePane.class</File>
                                 <File>apps/tests/Log4JFixture.class</File>
                                 <File>jmri/jmrit/display/EditorFrameOperator.class</File>
-                                <File>jmri/util/web/BrowserFactory.class</class>
+                                <File>jmri/util/web/BrowserFactory.class</File>
                             </excludes>
                             <rules>
                                 <rule>
