combine color keys in 1 place

--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -317,3 +317,20 @@ SendToolTip             = Send the specified packet (message)
 EnterHexToolTip         = Enter command as hex string (0xnnn)
 EnterHexBytesToolTip    = Enter command as hexadecimal bytes separated by a space, for example: 82 7D
 
+# interface colors
+# these are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color           = Color
+Black           = Black
+DarkGray        = Dark Gray
+Gray            = Gray
+LightGray       = Light Gray
+White           = White
+Red             = Red
+Pink            = Pink
+Yellow          = Yellow
+Green           = Green
+Orange          = Orange
+Blue            = Blue
+Magenta         = Magenta
+Cyan            = Cyan
+ColorClear      = Clear
